[package]
name = "dont_disappear"
version = "2.2.1"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Tiny crate that prevents the console window from closing when the program finishes.
"""
documentation = "https://docs.rs/dont_disappear/"
homepage = "http://efunb.com/"
repository = "https://gitlab.com/efunb/dont_disappear"
[dependencies]
crossterm = "0.5"